# filtsin

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  NEWS  README.md  filtsin
examples/arithmetic/: .1  main.cpp
examples/strict/: main.cpp
include/filtsin/macro/: def.hpp
include/filtsin/numeric/: w_int  w_int.hpp  w_int_arithmetic.hpp  w_int_bits.hpp  w_int_overflow_control.hpp
include/filtsin/numeric/impl/: w_int.hpp  w_int_arithmetic.hpp  w_int_bits.hpp  w_int_fill.hpp
include/filtsin/other/: const.hpp
include/mind/exceptions/: exception.hpp
include/mind/math/: digit.hpp  math.hpp  number.hpp  smath.hpp
include/mind/other/: common.hpp
src/math/: digit.cpp  math.cpp  number.cpp
src/other/: common.cpp
test/: Makefile  test.cpp  testMathAbs.cpp  testMathCnt.cpp  testMathPow.cpp  testMathSgn.cpp  testNumberDiv.cpp  testNumberMod.cpp  testNumberMul.cpp  testNumberSub.cpp  testNumberSum.cpp  test_helper.hpp
test/numeric/: w_int_arithmetic_test.cpp
